--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>cadastro</title>
     <style>
         body{
-            background-image: url(https://img.freepik.com/fotos-premium/conexao-de-rede-global-o-conceito-de-proteger-o-planeta-troca-de-dados-em-todo-o-mundo-abstrato-azul-renderizacao-em-3d-de-grandes-dados_710001-320.jpg?w=360);
+            background-color: brown;
             text-align: center;
         }
     </style>
