--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>cadastro</title>
     <style>
         body{
-            background-color: brown;
+            background-color: rgba(49, 88, 95, 0.514);
             text-align: center;
         }
     </style>
